--- a/index.html
+++ b/index.html
@@ -157,12 +157,14 @@
         <h2 class="title-style">Наша команда</h2>
         <ul class="team__cardlist">
           <li class="team__card">
+            <picture class="picture">
+              <source srcset="./images/our-team/img1mob.igor-demianenko-1x.jpg, ./images/img1mob.igor-demianenko-2x" media="(min-width:280px)">
             <img
               src="./images/our-team/img-4.jpg"
               alt="Игорь-Демьяненко-специалист"
               width="270"
               height="260"
-            />
+            /></picture>
             <div class="agent"> <h3 class="agent__name">Игорь Демьяненко</h3>
             <p class="agent__prof" lang="en">Product Designer</p></div>
           <ul class="card-social-links">
