--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
         <ul class="team__cardlist">
           <li class="team__card">
             <picture class="picture">
-              <source srcset="./images/our-team/img1mob.igor-demianenko-1x.jpg, ./images/img1mob.igor-demianenko-2x" media="(min-width:280px)">
+              <source srcset="./images/our-team/img1mob.igor-demianenko-1x.jpg" media="(min-width:280px)">
             <img
               src="./images/our-team/img-4.jpg"
               alt="Игорь-Демьяненко-специалист"
@@ -269,10 +269,10 @@
             <li class="customers__item"><a class="customers__link" href="index.html"><svg class="customers__logo">
               <use href="./images/icon-img/symbol-defs.svg#icon-group-two"> </use>
             </svg></a></li>
-            <li class="customers__item"><a class="customers__link" href="index.html"><svg class="customers__logo">
+            <li class="customers__item center"><a class="customers__link" href="index.html"><svg class="customers__logo">
               <use href="./images/icon-img/symbol-defs.svg#icon-group-three"> </use>
             </svg></a></li>
-            <li class="customers__item"><a class="customers__link" href="index.html"><svg class="customers__logo">
+            <li class="customers__item center"><a class="customers__link" href="index.html"><svg class="customers__logo">
               <use href="./images/icon-img/symbol-defs.svg#icon-group-for"> </use>
             </svg></a></li>
             <li class="customers__item"><a class="customers__link" href="index.html"><svg class="customers__logo">
