начал нашу команду

--- a/index.html
+++ b/index.html
@@ -160,10 +160,10 @@
             <picture class="picture">
               <source srcset="./images/our-team/img1mob.igor-demianenko-1x.jpg" media="(min-width:280px)">
             <img
-              src="./images/our-team/img-4.jpg"
+              src="./images/our-team/img1mob.igor-demianenko-1x.jpg"
               alt="Игорь-Демьяненко-специалист"
-              width="270"
-              height="260"
+              width="450"
+              height="460"
             /></picture>
             <div class="agent"> <h3 class="agent__name">Игорь Демьяненко</h3>
             <p class="agent__prof" lang="en">Product Designer</p></div>
@@ -183,10 +183,10 @@
           </li>
           <li class="team__card">
             <img
-              src="./images/our-team/img-1.jpg"
+              src="./images/our-team/img2mob.olga-repina-1x.jpg"
               alt="Ольга-Репина-специалист"
-              width="270"
-              height="260"
+              width="450"
+              height="460"
             />
             <div class="agent"> <h3 class="agent__name">Ольга Репина</h3>
             <p class="agent__prof" lang="en">Frontend Developer</p></div>
@@ -207,10 +207,10 @@
           </li>
           <li class="team__card">
             <img
-              src="./images/our-team/img-2.jpg"
+              src="./images/our-team/img3mob.nikolay-tarasov-1x.jpg"
               alt="Николай-Тарасов-специалист"
-              width="270"
-              height="260"
+              width="450"
+              height="460"
             />
             <div class="agent"> <h3 class="agent__name">Николай Тарасов</h3>
             <p class="agent__prof" lang="en">Marketing</p></div>
@@ -231,10 +231,10 @@
           </li>
           <li class="team__card">
             <img
-              src="./images/our-team/img-3.jpg"
+              src="./images/our-team/img4mob.mihail-ermakov-1x.jpg"
               alt="Михаил-Ермаков-специалист"
-              width="270"
-              height="260"
+              width="450"
+              height="460"
             />
             <div class="agent"> <h3 class="agent__name">Михаил Ермаков</h3>
             <p class="agent__prof" lang="en">UI Designer</p></div>
