--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
         <ul class="team__cardlist">
           <li class="team__card">
             <picture class="picture">
-              <source srcset="./images/our-team/img1mob.igor-demianenko-1x.jpg" media="(min-width:280px)">
+              <source srcset="./images/our-team/img1mob.igor-demianenko-1x.jpg, ./images/our-team/img1mob.igor-demianenko-2x" media="(min-width:280px)">
             <img
               src="./images/our-team/img1mob.igor-demianenko-1x.jpg"
               alt="Игорь-Демьяненко-специалист"
