--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
       <!-- section hero -->
 
       <section class="hero">
+        <picture>
+          <source srcset="../goit-markup-hw-08/images/icon-img/hero-1x.jpg" media="">
+        </picture>
         <div class="container">
           <h1 class="hero__name">Эффективные решения для вашего бизнеса</h1>
           <button class="hero__button" type="button" data-modal-open>Заказать услугу</button>
