--- a/index.html
+++ b/index.html
@@ -173,8 +173,8 @@
         <ul class="team__cardlist">
           <li class="team__card">
             <picture class="picture">
-              <source srcset="./images/our-team/img1mob.igor-demianenko-1x.jpg 1x, ./images/our-team/img1mob.igor-demianenko-2x.jpg 2x" media="(min-width:280px)">
-            <source srcset="./images/our-team/img1tablet.igor-demianenko-1x.jpg. 1x, ./images/our-team/img1tablet.igor-demianenko-2x.jpg 2x" media="(min-width: 768px)">
+              <source srcset="./images/our-team/img1mob.igor-demianenko-1x.jpg 1x, ./images/our-team/img1mob.igor-demianenko-2x.jpg 2x" media="(max-width:500px)">
+            <source srcset="./images/our-team/img1tablet.igor-demianenko-1x.jpg 1x, ./images/our-team/img1tablet.igor-demianenko-2x.jpg 2x" media="(min-width: 768px)">
             <source srcset="" media="(min-width: 1200px)">
               <img
               src="./images/our-team/img1mob.igor-demianenko-1x.jpg"
@@ -202,7 +202,7 @@
             <picture>
               <source
                 srcset="./images/our-team/img2mob.olga-repina-1x.jpg 1x, ./images/our-team/img2mob.olga-repina-2x.jpg 2x"
-                media="(min-width:280px)">
+                media="(max-width:500px)">
               <source srcset="./images/our-team/img2tablet.olga-repina-1x.jpg 1x, ./images/our-team/img2tablet.olga-repina-2x.jpg 2x" media="(min-width: 768px)">
               <source srcset="" media="(min-width: 1200px)">
             <img
@@ -230,7 +230,7 @@
           </li>
           <li class="team__card">
             <picture>
-              <source srcset="./images/our-team/img3mob.nikolay-tarasov-1x.jpg 1x, ./images/our-team/img3mob.nikolay-tarasov-2x.jpg 2x" media="(min-width:280px)">
+              <source srcset="./images/our-team/img3mob.nikolay-tarasov-1x.jpg 1x, ./images/our-team/img3mob.nikolay-tarasov-2x.jpg 2x" media="(max-width:500px)">
               <source srcset="./images/our-team/img3tablet.nikolay-tarasov-1x.jpg 1x, ./images/our-team/img3tablet.nikolay-tarasov-2x.jpg 2x" media="(min-width: 768px)">
               <source srcset="" media="(min-width: 1200px)">
             <img
@@ -258,7 +258,7 @@
           </li>
           <li class="team__card">
             <picture>
-              <source srcset="./images/our-team/img4mob.mihail-ermakov-1x.jpg 1x, ./images/our-team/img4mob.mihail-ermakov-2x.jpg 2x" media="(min-width:280px)">
+              <source srcset="./images/our-team/img4mob.mihail-ermakov-1x.jpg 1x, ./images/our-team/img4mob.mihail-ermakov-2x.jpg 2x" media="(max-width:500px)">
               <source srcset="./images/our-team/img4tablet.michail-ermakov-1x.jpg 1x, ./images/our-team/img4tablet.michail-ermakov-2x.jpg 2x" media="(min-width: 768px)">
               <source srcset="" media="(min-width: 1200px)">
             <img
