пофиксил главную для десктопа

--- a/index.html
+++ b/index.html
@@ -175,12 +175,12 @@
             <picture class="picture">
               <source srcset="./images/our-team/img1mob.igor-demianenko-1x.jpg 1x, ./images/our-team/img1mob.igor-demianenko-2x.jpg 2x" media="(max-width:500px)">
             <source srcset="./images/our-team/img1tablet.igor-demianenko-1x.jpg 1x, ./images/our-team/img1tablet.igor-demianenko-2x.jpg 2x" media="(min-width: 768px)">
-            <source srcset="" media="(min-width: 1200px)">
+            <source srcset="./images/our-team/1imgdesktop.igor-demianenko-1x.jpg 1x, ./images/our-team/1imgdesktop.igor-demianenko-2x.jpg 2x" media="(min-width: 1200px)">
               <img
-              src="./images/our-team/img1mob.igor-demianenko-1x.jpg"
+              src="#"
               alt="Игорь-Демьяненко-специалист"
-              width="450"
-              height="460"
+              width=""
+              height=""
             /></picture>
             <div class="agent"> <h3 class="agent__name">Игорь Демьяненко</h3>
             <p class="agent__prof" lang="en">Product Designer</p></div>
@@ -204,12 +204,12 @@
                 srcset="./images/our-team/img2mob.olga-repina-1x.jpg 1x, ./images/our-team/img2mob.olga-repina-2x.jpg 2x"
                 media="(max-width:500px)">
               <source srcset="./images/our-team/img2tablet.olga-repina-1x.jpg 1x, ./images/our-team/img2tablet.olga-repina-2x.jpg 2x" media="(min-width: 768px)">
-              <source srcset="" media="(min-width: 1200px)">
+              <source srcset="./images/our-team/2imgdesktop.olga-repina-1x.jpg 1x, ./images/our-team/2imgdesktop.olga-repina-2x.jpg 2x" media="(min-width: 1200px)">
             <img
-              src="./images/our-team/img2mob.olga-repina-1x.jpg"
+              src="#"
               alt="Ольга-Репина-специалист"
-              width="450"
-              height="460"
+              width=""
+              height=""
             /></picture>
             <div class="agent"> <h3 class="agent__name">Ольга Репина</h3>
             <p class="agent__prof" lang="en">Frontend Developer</p></div>
@@ -232,12 +232,12 @@
             <picture>
               <source srcset="./images/our-team/img3mob.nikolay-tarasov-1x.jpg 1x, ./images/our-team/img3mob.nikolay-tarasov-2x.jpg 2x" media="(max-width:500px)">
               <source srcset="./images/our-team/img3tablet.nikolay-tarasov-1x.jpg 1x, ./images/our-team/img3tablet.nikolay-tarasov-2x.jpg 2x" media="(min-width: 768px)">
-              <source srcset="" media="(min-width: 1200px)">
+              <source srcset="./images/our-team/3imgdesktop.nikolay-tarasov-1x.jpg 1x, ./images/our-team/3imgdesktop.nikolay-tarasov-2x.jpg 2x" media="(min-width: 1200px)">
             <img
-              src="./images/our-team/img3mob.nikolay-tarasov-1x.jpg"
+              src="#"
               alt="Николай-Тарасов-специалист"
-              width="450"
-              height="460"
+              width=""
+              height=""
             /></picture>
             <div class="agent"> <h3 class="agent__name">Николай Тарасов</h3>
             <p class="agent__prof" lang="en">Marketing</p></div>
@@ -260,12 +260,12 @@
             <picture>
               <source srcset="./images/our-team/img4mob.mihail-ermakov-1x.jpg 1x, ./images/our-team/img4mob.mihail-ermakov-2x.jpg 2x" media="(max-width:500px)">
               <source srcset="./images/our-team/img4tablet.michail-ermakov-1x.jpg 1x, ./images/our-team/img4tablet.michail-ermakov-2x.jpg 2x" media="(min-width: 768px)">
-              <source srcset="" media="(min-width: 1200px)">
+              <source srcset="./images/our-team/4imgdesktop.michail-ermakov-1x.jpg 1x, ./images/our-team/4imgdesktop.michail-ermakov-2x.jpg 2x" media="(min-width: 1200px)">
             <img
-              src="./images/our-team/img4mob.mihail-ermakov-1x.jpg"
+              src="#"
               alt="Михаил-Ермаков-специалист"
-              width="450"
-              height="460"
+              width=""
+              height=""
             /></picture>
             <div class="agent"> <h3 class="agent__name">Михаил Ермаков</h3>
             <p class="agent__prof" lang="en">UI Designer</p></div>
