пофиксил моб меню

--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
               
             </ul>
             <ul class="mobile-menu-social-list">
-              <li> <a class="mobile-menu-social-list__link" href="">Instagram  <span class="bord">|</span></a></li>
-              <li> <a class="mobile-menu-social-list__link" href="">Twitter   <span class="bord">|</span></a></li>
-              <li> <a class="mobile-menu-social-list__link" href="">Facebook  <span class="bord">|  </span></a></li>
-              <li> <a class="mobile-menu-social-list__link" href="">LinkedIn </a></li>
+              <li class="mobile-menu-social-list__item"> <a class="mobile-menu-social-list__link" href="">Instagram  </a></li>
+              <li class="mobile-menu-social-list__item"> <a class="mobile-menu-social-list__link" href="">Twitter   </a></li>
+              <li class="mobile-menu-social-list__item"> <a class="mobile-menu-social-list__link" href="">Facebook  </a></li>
+              <li class="mobile-menu-social-list__item"> <a class="mobile-menu-social-list__link" href="">LinkedIn </a></li>
             </ul>
         </div>
       </div>
