--- a/index.html
+++ b/index.html
@@ -51,25 +51,26 @@
           <button class="mobile-menu__close-btn" data-menu-close> <svg class="mobile-menu__icon">
             <use href="./images/icon-img/symbol-defs.svg#icon-close"></use>
           </svg></button>
+          <div class="mobile-menu__nav">
           <ul class="mobile-menu__nav-list">
             <li class="mobile-menu__item"> <a class="mobile-menu__link" href="">Студия</a></li>
             <li class="mobile-menu__item"> <a class="mobile-menu__link" href="./portfolio.html">Портфолио</a></li>
             <li class="mobile-menu__item"> <a class="mobile-menu__link" href="">Контакты</a></li>
             
           </ul>
+          <div class="mobile-menu__contacts-soc">
           <ul>
             <li ><a class="mobile-menu__contacts-tel" href="tel:+380961111111">  +380961111111</a></li>
               <li >
                 <a class="mobile-menu__contacts-mail" lang="en" target="_blank" href="mailto:info@devstudio.com">  info@devstudio.com</a>
               </li>
-              
             </ul>
             <ul class="mobile-menu-social-list">
               <li class="mobile-menu-social-list__item"> <a class="mobile-menu-social-list__link" href="">Instagram  </a></li>
               <li class="mobile-menu-social-list__item"> <a class="mobile-menu-social-list__link" href="">Twitter   </a></li>
               <li class="mobile-menu-social-list__item"> <a class="mobile-menu-social-list__link" href="">Facebook  </a></li>
               <li class="mobile-menu-social-list__item"> <a class="mobile-menu-social-list__link" href="">LinkedIn </a></li>
-            </ul>
+            </ul></div></div>
         </div>
       </div>
     </header></div>
